vlib/v/checker/tests/index_invalid_call.out
vlib/v/checker/tests/index_invalid_call.vv:4:20: error: cannot call the value of the map, it is not a function
    2 | fn main() {
    3 |     m := map[string]string{}
    4 |     eprintln(m['abc']())
      |                       ^
    5 |     array := ['', '1']
    6 |     array[0]()
vlib/v/checker/tests/index_invalid_call.vv:4:20: error: unknown function: 
    2 | fn main() {
    3 |     m := map[string]string{}
    4 |     eprintln(m['abc']())
      |                       ^
    5 |     array := ['', '1']
    6 |     array[0]()
vlib/v/checker/tests/index_invalid_call.vv:4:2: error: `eprintln` can not print void expressions
    2 | fn main() {
    3 |     m := map[string]string{}
    4 |     eprintln(m['abc']())
      |     ~~~~~~~~~~~~~~~~~~~~
    5 |     array := ['', '1']
    6 |     array[0]()
vlib/v/checker/tests/index_invalid_call.vv:6:11: error: cannot call the element of the array, it is not a function
    4 |     eprintln(m['abc']())
    5 |     array := ['', '1']
    6 |     array[0]()
      |              ^
    7 | }
vlib/v/checker/tests/index_invalid_call.vv:6:11: error: unknown function: 
    4 |     eprintln(m['abc']())
    5 |     array := ['', '1']
    6 |     array[0]()
      |              ^
    7 | }
